--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
         <main class="game none">
             <div class="weapon-div"><img src="./photos/glock.png"></div>
-            <button class="clicker-button"><span class="clicker-button-span">Dawid Gwóźdź</span></button>
+            <button class="clicker-button"><img src="./photos/stalin.png" class="clicker-button-img"></button>
             <div class="weapon-div"><img class="weapon-right" src="./photos/glock.png"></div>
         </main>
 
