--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
         <!-- MAIN CONTENT -->
 
         <header class="main">
-            <span class="span__list">ZADANIA
+            <span class="span__list">PROJEKTY
                 <ul>
-                    <li><a href="./pages/1/index1.html">ZADANIE 1</a></li>
-                    <li><a href="./pages/2/index2.html">ZADANIE 2</a></li>
-                    <li><a href="./pages/3/index3.html">ZADANIE 3</a></li>
-                    <li><a href="./pages/4/index99.html">ZADANIE 4</a></li>
+                    <li><a href="https://brosiatson.github.io/Formularz-przeslanie-opinii/">FORMULARZ</a></li>
+                    <li><a href="https://brosiatson.github.io/testpolitycznybybrosiatson/">TEST POLITYCZNY</a></li>
+                    <li><a href="https://brosiatson.github.io/interactive-pricing-component/">KONTO PREMIUM</a></li>
+                    <li><a href="https://brosiatson.github.io/Kalkulator-HTML/">KALKULATOR</a></li>
                     <li><a href="./pages/5/index33.html">ZADANIE 5</a></li>
                     <li><a href="./pages/6/index.html">ZADANIE 6</a></li>
                     <li><a href="./pages/7/index.html">ZADANIE 7</a></li>
